update completed assignment

--- a/week1/index.html
+++ b/week1/index.html
@@ -8,6 +8,17 @@
     <script src="https://kit.fontawesome.com/64f3052485.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <input type="checkbox" name="" id="menu_control">
+    <label for="menu_control" class="menu_btn">
+        <span>選單</span>
+    </label>
+    <nav class="hamburger-menu">
+        <a href="#">Item1</a>
+        <a href="#">Item2</a>
+        <a href="#">Item3</a>
+        <a href="#">Item4</a>
+    </nav>
+
     <nav class="navbar">
         <a href="#" class="logo">My Website</a>
         <ul class="navbar-list">
