fix task1 & task4

--- a/week3/index.html
+++ b/week3/index.html
@@ -48,68 +48,7 @@
             </div>
 
         </div>
-        <div class="big-boxes">
-            <div class="box first-column">
-                <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
-                <div class="box-title">
-                    <p>Title 1</p>
-                </div>
-            </div>
-            <div class="box">
-                <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
-                <div class="box-title">
-                    <p>Title 2</p>
-                </div>
-            </div>
-            <div class="box">
-                <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
-                <div class="box-title">
-                    <p>Title 3</p>
-                </div>
-            </div>
-            <div class="box">
-                <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
-                <div class="box-title">
-                    <p>Title 4</p>
-                </div>
-            </div>
-            <div class="box">
-                <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
-                <div class="box-title">
-                    <p>Title 5</p>
-                </div>
-            </div>
-            <div class="box first-column">
-                <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
-                <div class="box-title">
-                    <p>Title 6</p>
-                </div>
-            </div>
-            <div class="box">
-                <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
-                <div class="box-title">
-                    <p>Title 7</p>
-                </div>
-            </div>
-            <div class="box">
-                <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
-                <div class="box-title">
-                    <p>Title 8</p>
-                </div>
-            </div>
-            <div class="box">
-                <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
-                <div class="box-title">
-                    <p>Title 9</p>
-                </div>
-            </div>
-            <div class="box">
-                <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
-                <div class="box-title">
-                    <p>Title 10</p>
-                </div>
-            </div>
-        </div>
-
+        <div class="big-boxes"></div>
+        <button id="loadMore">Load More</button>
 </body>
 </html>
